--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-hola
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi libro</title>
+
+  <!-- Estilos -->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+  <div class="container">
+    <div id="book">
+      <div class="page">Página 1</div>
+      <div class="page">Página 2</div>
+      <div class="page">Página 3</div>
+      <div class="page">Página 4</div>
+    </div>
+  </div>
+
+  <!-- Librerías -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/blasten/turn.js@4/lib/turn.min.js"></script>
+
+  <!-- Nuestro JS -->
+  <script src="script.js"></script>
+
+</body>
+</html>
