--- a/index.html
+++ b/index.html
@@ -3,53 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Libro</title>
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #ddd;
-    }
+  <title>Libro HTML</title>
 
-    #book {
-      width: 300px;
-      height: 400px;
-    }
+  <!-- CSS -->
+  <link rel="stylesheet" href="style.css">
 
-    #book div {
-      background: white;
-      border: 1px solid #999;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 20px;
-    }
-  </style>
+  <!-- jQuery (OBLIGATORIO antes de turn.js) -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- Turn.js -->
+  <script src="turn.min.js"></script>
 </head>
 <body>
 
-<div id="book">
-  <div>Página 1</div>
-  <div>Página 2</div>
-  <div>Página 3</div>
-  <div>Página 4</div>
-</div>
+  <div id="book">
+    <div class="page">Página 1</div>
+    <div class="page">Página 2</div>
+    <div class="page">Página 3</div>
+    <div class="page">Página 4</div>
+  </div>
 
-<!-- jQuery (PRIMERO) -->
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-<!-- Turn.js (ESTE SÍ FUNCIONA) -->
-<script src="https://cdn.jsdelivr.net/gh/blasten/turn.js@4/lib/turn.min.js"></script>
-
-<script>
-  $(function () {
-    $("#book").turn();
-  });
-</script>
-
+  <!-- JS -->
+  <script src="script.js"></script>
 </body>
 </html>
