--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Libro</title>
 
   <link rel="stylesheet" href="style.css">
@@ -19,7 +18,7 @@
     <div class="page">Página 4</div>
   </div>
 
-  <div id="controls">
+  <div class="controls">
     <button id="prev">Anterior</button>
     <button id="next">Siguiente</button>
   </div>
@@ -27,3 +26,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
