--- a/index.html
+++ b/index.html
@@ -5,26 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Libro</title>
 
-  <link rel="stylesheet" href="style.css">
+  <!-- PageFlip CSS (CLAVE) -->
+  <link rel="stylesheet" href="https://unpkg.com/page-flip/dist/css/page-flip.css">
 
-  <!-- StPageFlip -->
-  <script src="https://unpkg.com/page-flip/dist/js/page-flip.browser.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div id="book">
-    <div class="page">Página 1</div>
-    <div class="page">Página 2</div>
-    <div class="page">Página 3</div>
-    <div class="page">Página 4</div>
-  </div>
-
-  <div class="controls">
-    <button onclick="pageFlip.flipPrev()">Anterior</button>
-    <button onclick="pageFlip.flipNext()">Siguiente</button>
-  </div>
-
-  <script src="script.js"></script>
-</body>
-</html>
 
