--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <div class="page portada">
       <img src="portada.jpg">
     </div>
+
     <div class="page">Página 1</div>
     <div class="page">Página 2</div>
     <div class="page">Página 3</div>
     <div class="page">Página 4</div>
   </div>
 
-  <!-- BOTONES DEL LIBRO -->
+  <!-- CONTROLES DEL LIBRO -->
   <div class="controls">
     <button id="prev">Anterior</button>
     <button id="next">Siguiente</button>
@@ -34,10 +35,12 @@
   <!-- REPRODUCTOR -->
   <div class="player">
     <div id="disc" class="disc"></div>
+
     <button id="playBtn">▶️</button>
     <button id="muteBtn">🔊</button>
 
-    <audio id="audio">
+    <!-- AUDIO CON LOOP -->
+    <audio id="audio" loop>
       <source src="cancion.mp3" type="audio/mpeg">
     </audio>
   </div>
