--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- jQuery (OBLIGATORIO para turn.js) -->
+  <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
@@ -22,9 +22,6 @@
   <audio id="audio" loop preload="auto">
     <source src="cancion.mp3" type="audio/mpeg">
   </audio>
-
-  <!-- DISCO -->
-  <div class="disco"></div>
 
   <!-- LIBRO -->
   <div id="book">
