--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
   <title>Libro interactivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- CSS -->
   <link rel="stylesheet" href="style.css">
 
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+  <!-- turn.js -->
+  <script src="turn.min.js"></script>
 </head>
 <body>
 
-  <!-- CAPA PARA ACTIVAR AUDIO -->
+  <!-- Activar audio -->
   <div id="activar">
-    <div class="mensaje">Toca una vez la pantalla 🎶</div>
+    <div class="mensaje">Toca una vez la pantalla para activar la música 🎶</div>
   </div>
 
-  <!-- AUDIO -->
-  <audio id="audio" loop preload="auto">
-    <source src="cancion.mp3" type="audio/mpeg">
-  </audio>
+  <!-- Audio -->
+  <audio id="musica" src="musica.mp3" loop></audio>
 
-  <!-- LIBRO -->
+  <!-- Libro -->
   <div id="book">
     <div class="page portada">
       <img src="portada.jpg" alt="Portada">
@@ -31,13 +31,8 @@
     <div class="page">Página 1</div>
     <div class="page">Página 2</div>
     <div class="page">Página 3</div>
-    <div class="page">Página 4</div>
   </div>
 
-  <!-- JS -->
-  <script src="turn.min.js"></script>
   <script src="script.js"></script>
-
 </body>
 </html>
-
