--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <!-- turn.js -->
+  <!-- Turn.js -->
   <script src="turn.min.js"></script>
 </head>
 <body>
 
-  <!-- Activar audio -->
-  <div id="activar">
-    <div class="mensaje">Toca una vez la pantalla para activar la música 🎶</div>
-  </div>
-
   <!-- Audio -->
-  <audio id="musica" src="musica.mp3" loop></audio>
+  <audio id="musica" src="musica.mp3" loop preload="auto"></audio>
+
+  <!-- Botones -->
+  <div class="controles">
+    <button id="prev">⬅ Anterior</button>
+    <button id="next">Siguiente ➡</button>
+  </div>
 
   <!-- Libro -->
   <div id="book">
