--- a/index.html
+++ b/index.html
@@ -16,13 +16,7 @@
 <body>
 
   <!-- Audio -->
-  <audio id="musica" src="musica.mp3" loop preload="auto"></audio>
-
-  <!-- Botones -->
-  <div class="controles">
-    <button id="prev">⬅ Anterior</button>
-    <button id="next">Siguiente ➡</button>
-  </div>
+  <audio id="musica" src="musica.mp3" loop></audio>
 
   <!-- Libro -->
   <div id="book">
