--- a/index.html
+++ b/index.html
@@ -22,12 +22,18 @@
 
   <!-- Libro -->
   <div id="book">
+    <!-- Portada -->
     <div class="page portada">
       <img src="portada.jpg">
     </div>
+
+    <!-- Contenido -->
     <div class="page">Página 1</div>
     <div class="page">Página 2</div>
     <div class="page">Página 3</div>
+    <div class="page">Página 4</div>
+    <div class="page">Página 5</div>
+    <div class="page">Página 6</div>
   </div>
 
   <script src="script.js"></script>
