--- a/index.html
+++ b/index.html
@@ -24,16 +24,28 @@
   <div id="book">
     <!-- Portada -->
     <div class="page portada">
-      <img src="portada.jpg">
+      <img src="portada.jpg" alt="Portada">
     </div>
 
-    <!-- Contenido -->
-    <div class="page">Página 1</div>
-    <div class="page">Página 2</div>
-    <div class="page">Página 3</div>
-    <div class="page">Página 4</div>
-    <div class="page">Página 5</div>
-    <div class="page">Página 6</div>
+    <!-- Páginas con imágenes -->
+    <div class="page">
+      <img src="pagina1.jpg" alt="Página 1" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="page">
+      <img src="pagina2.jpg" alt="Página 2" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="page">
+      <img src="pagina3.jpg" alt="Página 3" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="page">
+      <img src="pagina4.jpg" alt="Página 4" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="page">
+      <img src="pagina5.jpg" alt="Página 5" style="width:100%; height:100%; object-fit:cover;">
+    </div>
+    <div class="page">
+      <img src="pagina6.jpg" alt="Página 6" style="width:100%; height:100%; object-fit:cover;">
+    </div>
   </div>
 
   <script src="script.js"></script>
