--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <div id="book">
   <!-- Portada -->
   <div class="page portada">
-    <img src="portada.png" alt="Portada">
+    <img src="portada.jpg" alt="Portada">
   </div>
 
   <!-- Páginas con imágenes -->
