--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Libro interactivo</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Fuente Gelasio desde Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Gelasio&display=swap" rel="stylesheet">
+  <!-- Fuente Baloo 2 desde Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
 
@@ -45,7 +45,7 @@
       <img src="pagina3.jpg" alt="Página 3">
     </div>
 
-    <!-- Página 5: frase en grande -->
+    <!-- Página 5: frase centrada y más arriba -->
     <div class="page">
       <img src="pagina4.jpg" alt="Página 4">
       <div class="frase-central">
@@ -53,7 +53,7 @@
       </div>
     </div>
 
-    <!-- Página 6: imagen superpuesta en JPG, centrada -->
+    <!-- Página 6: sticker centrado en JPG -->
     <div class="page">
       <img src="pagina5.jpg" alt="Página 5">
       <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
