--- a/index.html
+++ b/index.html
@@ -1,35 +1,74 @@
-<!-- Página 2 -->
-<div class="page">
-  <img src="pagina1.jpg" alt="Página 1">
-  <div class="texto-superpuesto">
-    Podría decir muchas cosas, que esto, que aquello, que lo otro, 
-    pero creo que realmente no hay manera correcta de definir lo que significas para mí.
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Libro interactivo</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<!-- Página 3 -->
-<div class="page">
-  <img src="pagina2.jpg" alt="Página 2">
-  <div class="texto-superpuesto">
-    Lo cual es chistoso, porque aunque parece poco tiempo 
-    (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), 
-    siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
-  </div>
-</div>
+  <!-- Fuente Baloo 2 desde Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@600&display=swap" rel="stylesheet">
 
-<!-- Página 4 -->
-<div class="page">
-  <img src="pagina3.jpg" alt="Página 3">
-  <div class="texto-superpuesto">
-    Cuando incluso por cosas tan simples terminé queriendo verte sonreír, 
-    y sin saberlo, y tal vez sin siquiera necesitarlo,
-  </div>
-</div>
+  <link rel="stylesheet" href="style.css">
 
-<!-- Página 5 -->
-<div class="page">
-  <img src="pagina4.jpg" alt="Página 4">
-  <div class="frase-central">
-    <span class="enfasis">Te volviste caos entre tanta monotonía</span>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="turn.min.js"></script>
+</head>
+<body>
+
+  <!-- ACTIVAR AUDIO -->
+  <div id="activar">
+    <div class="mensaje">Toca una vez la pantalla para comenzar 🎶</div>
   </div>
-</div>
+
+  <!-- Audio -->
+  <audio id="musica" src="musica.mp3" loop></audio>
+
+  <!-- Libro -->
+  <div id="book">
+    <!-- Portada -->
+    <div class="page portada">
+      <img src="portada.jpg" alt="Portada">
+    </div>
+
+    <!-- Página 2 -->
+    <div class="page">
+      <img src="pagina1.jpg" alt="Página 1">
+      <div class="texto-superpuesto">
+        Podría decir muchas cosas, que esto, que aquello, que lo otro, pero creo que realmente no hay manera correcta de definir lo que significas para mí.
+      </div>
+    </div>
+
+    <!-- Página 3 -->
+    <div class="page">
+      <img src="pagina2.jpg" alt="Página 2">
+      <div class="texto-superpuesto">
+        Lo cual es chistoso, porque aunque parece poco tiempo (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
+      </div>
+    </div>
+
+    <!-- Página 4 -->
+    <div class="page">
+      <img src="pagina3.jpg" alt="Página 3">
+      <div class="texto-superpuesto">
+        Cuando incluso por cosas tan simples terminé queriendo verte sonreír, y sin saberlo, y tal vez sin siquiera necesitarlo,
+      </div>
+    </div>
+
+    <!-- Página 5: frase final enfocada -->
+    <div class="page">
+      <img src="pagina4.jpg" alt="Página 4">
+      <div class="frase-central">
+        <span class="enfasis">Te volviste el caos entre tanta monotonía</span>
+      </div>
+    </div>
+
+    <!-- Página 6: sticker centrado -->
+    <div class="page">
+      <img src="pagina5.jpg" alt="Página 5">
+      <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
