--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <div class="page">
       <img src="pagina1.jpg" alt="Página 1">
       <div class="texto-superpuesto">
-        Podría decir muchas cosas, que esto, que aquello, que lo otro, pero creo que realmente no hay manera correcta de definir lo que significas para mí.
+        Podría decir muchas cosas, que esto, que aquello, que lo otro, 
+        pero creo que realmente no hay manera correcta de definir lo que significas para mí.
       </div>
     </div>
 
@@ -42,7 +43,9 @@
     <div class="page">
       <img src="pagina2.jpg" alt="Página 2">
       <div class="texto-superpuesto">
-        Lo cual es chistoso, porque aunque parece poco tiempo (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
+        Lo cual es chistoso, porque aunque parece poco tiempo 
+        (fue quizá hace medio año, tal vez más, tal vez menos que "empezó"), 
+        siempre es curioso cuando aun sin esperar nada, terminas queriendo todo, ¿no?
       </div>
     </div>
 
@@ -50,7 +53,8 @@
     <div class="page">
       <img src="pagina3.jpg" alt="Página 3">
       <div class="texto-superpuesto">
-        Cuando incluso por cosas tan simples terminé queriendo verte sonreír, y sin saberlo, y tal vez sin siquiera necesitarlo,
+        Cuando incluso por cosas tan simples terminé queriendo verte sonreír, 
+        y sin saberlo, y tal vez sin siquiera necesitarlo,
       </div>
     </div>
 
