--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
 
-    <!-- Página 6: sticker centrado -->
+    <!-- Página 6: sticker centrado exacto -->
     <div class="page">
       <img src="pagina5.jpg" alt="Página 5">
       <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
