--- a/index.html
+++ b/index.html
@@ -64,11 +64,16 @@
 
     <!-- Página 6: sticker centrado -->
     <div class="page">
-      <img src="pagina5.jpg" alt="Página 5">
+      <img src="pagina4.jpg" alt="Página 4">
       <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
     </div>
   </div>
 
+  <div class="page">
+      <img src="pagina5.jpg" alt="Página 5">
+      <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
