--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <!-- jQuery y Turn.js -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="turn.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/turn.js/4.1.0/turn.min.js"></script>
 </head>
 <body>
 
@@ -25,7 +26,7 @@
 
   <!-- Libro -->
   <div id="book">
-    <!-- Portada -->
+    <!-- Página 1: Portada -->
     <div class="page portada">
       <img src="portada.jpg" alt="Portada">
     </div>
@@ -54,17 +55,17 @@
       </div>
     </div>
 
-    <!-- Página 5: frase final enfocada -->
+    <!-- Página 5: frase final -->
     <div class="page">
-      <img src="pagina5.jpg" alt="Página 5">
+      <img src="pagina4.jpg" alt="Página 4">
       <div class="frase-central">
-        <span class="enfasis">Te volviste caos entre tanta monotonía</span>
+        <span class="enfasis">Te volviste el caos entre tanta monotonía</span>
       </div>
     </div>
 
-    <!-- Página 6: sticker centrado -->
+    <!-- Página 6: sticker -->
     <div class="page">
-      <img src="pagina4.jpg" alt="Página 4">
+      <img src="pagina5.jpg" alt="Página 5">
       <img src="imagen-superpuesta.jpg" alt="Sticker" class="imagen-superpuesta">
     </div>
   </div>
