--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <!-- Libro -->
   <div id="book">
-    <!-- Página 1: Portada -->
+    <!-- Portada -->
     <div class="page portada">
       <img src="portada.jpg" alt="Portada">
     </div>
